--- a/package.json
+++ b/package.json
@@ -71,5 +71,9 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/pdf-parse": "^1.1.4",
+    "encoding": "^0.1.13"
   }
 }
