--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "next-themes": "^0.3.0",
     "openai": "^4.29.1",
     "pdf-parse": "^1.1.1",
+    "pdf.js-extract": "^0.2.1",
+    "pdf2json": "^3.1.4",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
