--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^5.2.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -56,8 +57,6 @@
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "openai": "^4.29.1",
-    "pdf-parse": "^1.1.1",
-    "pdf.js-extract": "^0.2.1",
     "pdf2json": "^3.1.4",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -67,6 +66,7 @@
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
