--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "firebase": "^11.0.2",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.13.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "openai": "^4.29.1",
     "pdf2json": "^3.1.4",
@@ -72,7 +73,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/pdf-parse": "^1.1.4",
